--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.39",
+        "prettier": "^3.3.2",
+        "prettier-plugin-tailwindcss": "^0.6.5",
         "tailwindcss": "^3.4.4",
         "vite": "^5.0"
     }
