--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "format": "npx prettier . --write"
+        "format": "npx prettier resources/views/** --write"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.19",
