--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "prettier-plugin-tailwindcss": "^0.6.5",
         "tailwindcss": "^3.4.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "prettier-plugin-blade": "^2.1.16"
     }
 }
