--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "singleAttributePerLine": false,
     "tabWidth": 4,
+    "printWidth": 120,
     "plugins": [
         "prettier-plugin-tailwindcss",
         "prettier-plugin-blade"
