--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
+    "private": true,
+    "type": "module",
+    "scripts": {
     "dev": "vite",
     "build": "vite build",
     "format": "npx prettier ./resources/views/* --write",
     "lint-staged": "lint-staged",
     "prepare": "husky"
-  },
-  "devDependencies": {
+    },
+    "devDependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.4",
     "husky": "^9.0.11",
@@ -20,5 +20,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "vite": "^5.0"
-  }
+    },
+    "engines": {
+        "node": "20.x"
+    }
 }
