chore: update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     }],
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "false",
+        "APP_DEBUG": "true",
         "APP_URL": "https://laravel-payhere.com",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
