--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
-            "@php artisan migrate --graceful --ansi"
+            "@php artisan migrate --graceful --ansi",
+            "@php artisan filament:assets --ansi"
         ]
     },
     "extra": {
