ci: update vercel

--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,8 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_STORE": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "DB_DATABASE": "pgsql"
     },
     "outputDirectory": "public"
 }
