--- a/vercel.json
+++ b/vercel.json
@@ -10,21 +10,31 @@
     },
     "routes": [
         {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
     ],
     "env": {
+        "APP_ENV": "production",
         "APP_DEBUG": "true",
+        "APP_URL": "https://laravel-payhere.com",
+
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
+
         "VIEW_COMPILED_PATH": "/tmp",
+
         "CACHE_STORE": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
+
         "DB_DATABASE": "pgsql"
     },
     "outputDirectory": "public"
