ci: update vercel

--- a/vercel.json
+++ b/vercel.json
@@ -33,5 +33,6 @@
 
         "DB_DATABASE": "pgsql"
     },
-    "outputDirectory": "public"
+    "outputDirectory": "public",
+    "buildCommand": "sh vercel.sh"
 }
