--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     },
     "routes": [
         {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
