--- a/vercel.json
+++ b/vercel.json
@@ -10,16 +10,8 @@
     },
     "routes": [
         {
-            "src": "/build/(.*)",
-            "dest": "/build/$1"
-        },
-        {
-            "src": "/css/(.*)",
-            "dest": "/css/$1"
-        },
-        {
-            "src": "/js/(.*)",
-            "dest": "/js/$1"
+            "src": "/(build|css|js|vendor)/(.*)",
+            "dest": "/$1/$2"
         },
         {
             "src": "/(.*)",
