--- a/vercel.json
+++ b/vercel.json
@@ -36,7 +36,7 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
 
-        "DB_DATABASE": "pgsql"
+        "DB_CONNECTION": "pgsql"
     },
     "buildCommand": "sh vercel.sh"
 }
