--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "dasundev/laravel-payhere": "^1.0.0-beta.19",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5",
-        "tursodatabase/turso-driver-laravel": "^1.0"
+        "livewire/livewire": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
