ci: update vercel

--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,7 @@
     "outputDirectory": "public",
     "env": {
         "APP_URL": "https://stage.laravel-payhere.com",
+        "APP_DEBUG": "true",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
@@ -39,8 +40,7 @@
     "build": {
         "env": {
             "APP_ENV": "production",
-            "APP_URL": "https://laravel-payhere.com",
-            "APP_DEBUG": "false"
+            "APP_URL": "https://laravel-payhere.com"
         }
     },
     "buildCommand": "sh vercel.sh"
