--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "format": "npx prettier ./resources/views/* --write",
         "lint-staged": "lint-staged",
         "prepare": "husky",
-        "docs:build": "cd ./docs && npm install && npm run build"
+        "docs:build": "cd ./docs && npm run build"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.19",
