--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "build": "vite build",
         "format": "npx prettier ./resources/views/* --write",
         "lint-staged": "lint-staged",
-        "prepare": "husky",
-        "docs:build": "cd ./docs && npm run build"
+        "prepare": "husky"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.19",
