--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name laravel-payhere.com;
     root /home/laravel-payhere.com/public;
 
