--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+PAYHERE_MERCHANT_ID=
+PAYHERE_MERCHANT_SECRET=
+
+TORCHLIGHT_TOKEN=
+
+GITHUB_TOKEN=
+
+LICENSE_API_TOKEN=
