--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/build
 /public/hot
 /public/storage
+/public/docs
 /storage/*.key
 /vendor
 .env
@@ -18,3 +19,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+.vercel
+.DS_Store
