--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name laravel-payhere.com;
-    root /home/laravel-payhere.com/public;
+    root /home/laravel/laravel-payhere.com/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
