--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "saloonphp/laravel-plugin": "^3.0",
+        "spatie/laravel-sitemap": "^7.2",
         "torchlight/torchlight-laravel": "^0.6.0"
     },
     "require-dev": {
