--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.2",
         "aws/aws-sdk-php": "^3.322",
-        "laravel-payhere/laravel-payhere": "^1.0.0-beta.21",
+        "laravel-payhere/laravel-payhere": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
